--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.8",
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^10.0.1",
@@ -37,18 +38,23 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "i": "^0.3.7",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "typeorm": "^0.3.17",
+    "uuid": "^11.0.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.8.2",
     "@types/passport-jwt": "^4.0.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.50.0",
