--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -27,16 +28,24 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.8",
+    "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/cron": "^2.0.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.7.6",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "i": "^0.3.7",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
@@ -44,6 +53,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.17",
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
